# tagged-exception-core

./: .travis.yml  ChangeLog.md  LICENSE  README.md  tagged-exception-core.cabal
core/: ChangeLog.md  LICENSE  tagged-exception-core.cabal
core/src/Control/Monad/: TaggedException.hs
core/src/Control/Monad/TaggedException/: Core.hs  Hidden.hs  Internal.hs  Unsafe.hs  Utilities.hs
core/src/Control/Monad/TaggedException/Internal/: IO.hs  Throws.hs
extra/: LICENSE  tagged-exception-extra.cabal
extra/src/Control/Monad/TaggedException/: ExceptionT.hs  UserException.hs
instances-comonad/: tagged-exception-instances-comonad.cabal
instances-comonad/src/Control/Monad/TaggedException/Instances/: Comonad.hs
lifting/: ChangeLog.md  LICENSE  tagged-exception-lifting.cabal
lifting/src/Control/Monad/TaggedException/: Lift.hs
src/Control/Monad/: TaggedException.hs
src/Control/Monad/TaggedException/: Core.hs  Hidden.hs  Unsafe.hs  Utilities.hs
src/Control/Monad/TaggedException/Internal/: Throws.hs
transformer/: tagged-exception-transformer.cabal
transformer/src/Control/Monad/TaggedException/: ExceptionT.hs  UserException.hs
