Name:               tagged-exception-core
Version:            1.0.0.0
Synopsis:           Reflect exceptions using phantom types.
Description:
  This library provides interface similar to /extensible-exceptions/.  It
  introduces 'MonadException' class, which uses phantom types to tag code that
  may raise exception.  Intention is to make exceptions explicit and to
  enforce exception handling.
Copyright:          Copyright (c) 2009 - 2013, Peter Trsko
License:            BSD3
License-file:       LICENSE
Author:             Peter Trsko
Maintainer:         peter.trsko@gmail.com
-- Bug-reports:
Category:
    Control
  , Error Handling
  , Failure
  , Monads
  , Phantom Types

Build-type:         Simple
Cabal-version:      >= 1.8
-- Tested-with:
-- Extra-source-files:

Flag pedantic
  Description:
    Pass additional flags, including -Werror, to GHC during compilation.
  Default:          False

Flag base-4_2-4_6
  Description:      Depend on base >= 4.2 && < 4.6.
  Default:          False

Library
  Hs-source-dirs:   src
  Exposed-modules:
      Control.Monad.TaggedException
    , Control.Monad.TaggedException.Core
    , Control.Monad.TaggedException.Hidden
    , Control.Monad.TaggedException.Unsafe
    , Control.Monad.TaggedException.Utilities
  Other-modules:
      Control.Monad.TaggedException.Internal
    , Control.Monad.TaggedException.Internal.IO

  if flag(base-4_2-4_6)
    Build-depends:
        base >= 4.2 && < 4.7
  else
    Build-depends:
        base >= 4 && < 4.2
      , extensible-exceptions >= 0.1.1.3
  Build-depends:
        transformers >= 0.2 && < 0.4

  GHC-options:      -Wall
  if impl(GHC >= 6.8)
    GHC-options:    -fwarn-tabs
  if impl(GHC >= 7.2)
    GHC-options:    -fwarn-identities
  if flag(pedantic)
    GHC-options:    -Werror
