name:               tagged-exception-extra
version:            1.1.0.0
synopsis:           Extra types and functions for /tagged-excpeption-core/.
description:
  Library provides:
  .
    * @UserException@ data type with @Monoid@ and @Semigroup@ instances.
  .
    * @ExceptionT@ monad transformer similar to @ErrorT@ with @MonadException@
      and @MonadExceptionUtilities@ instances.
Homepage:           https://github.com/trskop/tagged-exception
license:            BSD3
license-file:       LICENSE
author:             Peter Trsko
maintainer:         peter.trsko@gmail.com
copyright:          Copyright (c) 2009 - 2013, Peter Trsko
category:
    Control
  , Error Handling
  , Failure
  , Monads
  , Phantom Types

build-type:         Simple
cabal-version:      >=1.8
-- Tested-with:
-- Extra-source-files:

flag pedantic
  Description:
    Pass additional flags, including -Werror, to GHC during compilation.
  Default:          False

flag with-data-default-class
  Description:      Use data-default-class package instead of data-default.
  Default:          True

library
  hs-source-dirs:   src
  exposed-modules:
      Control.Monad.TaggedException.UserException
    , Control.Monad.TaggedException.ExceptionT
  -- other-modules:
  build-depends:
      base >= 4 && < 4.7
    -- ^ Tagged-exception-core is capable to handle this range.
    , tagged-exception-core >= 1.1.0.0 && < 2
    , transformers >= 0.2 && < 0.4
    -- ^ Tagged-exception-core is capable to handle this range.

  if flag(with-data-default-class)
    build-depends:  data-default-class == 0.0.*
  else
    build-depends:  data-default >= 0.2 && < 0.6

  GHC-options:      -Wall
  if impl(GHC >= 6.8)
    GHC-options:    -fwarn-tabs
  if impl(GHC >= 7.2)
    GHC-options:    -fwarn-identities
  if flag(pedantic)
    GHC-options:    -Werror

source-repository head
  type:             git
  location:         git://github.com/trskop/tagged-exception.git
