name:               tagged-exception-instances-comonad
version:            1.1.0.0
synopsis:
  Comonad instances for /tagged-excpeption-core/ package.
description:
  Library provides:
  .
    * @instance Comonad w => Comonad (Throws e w)@
  .
    * @instance ComonadApply w => ComonadApply (Throws e w)@.
homepage:           https://github.com/trskop/tagged-exception
bug-reports:        https://github.com/trskop/tagged-exception/issues
license:            BSD3
license-file:       LICENSE
author:             Peter Trsko
maintainer:         peter.trsko@gmail.com
copyright:          Copyright (c) 2013, Peter Trsko
category:
    Control
  , Error Handling
  , Failure
  , Comonads
  , Phantom Types

build-type:         Simple
cabal-version:      >=1.8
-- Tested-with:
-- Extra-source-files:

flag pedantic
  Description:
    Pass additional flags, including -Werror, to GHC during compilation.
  Default:          False

library
  hs-source-dirs:   src
  exposed-modules:
      Control.Monad.TaggedException.Instances.Comonad
  -- other-modules:
  build-depends:
      base >= 4 && < 4.7
    -- ^ Tagged-exception-core is capable to handle this range.
    , tagged-exception-core >= 1.1.0.0 && < 2
    , comonad >= 3.0 && < 4
    -- ^ In version 3.0 definition of Comonad changed and Extend class is no
    -- longer used.

  GHC-options:      -Wall
  if impl(GHC >= 6.8)
    GHC-options:    -fwarn-tabs
  if impl(GHC >= 7.2)
    GHC-options:    -fwarn-identities
  if flag(pedantic)
    GHC-options:    -Werror

source-repository head
  type:             git
  location:         git://github.com/trskop/tagged-exception.git
