name:               tagged-exception-lifting
version:            2.0.0.0
synopsis:
  Commonly used lifting operations mostly from different kinds of error
  handling.
description:
  Commonly used lifting operations mostly from different kinds of error
  handling in to API provided by /tagged-exception-core/ package.
  .
  Library provides:
  .
    * Operations for lifting @Maybe@ and @Either@ in to @MonadException@ context.
  .
    * Function @liftIOT@ that is a short hand for @liftT . liftIO@.
homepage:           https://github.com/trskop/tagged-exception
bug-reports:        https://github.com/trskop/tagged-exception/issues
license:            BSD3
license-file:       LICENSE
author:             Peter Trsko
maintainer:         peter.trsko@gmail.com
copyright:          Copyright (c) 2011 - 2014, Peter Trsko
category:
    Control
  , Error Handling
  , Failure
  , Monads
  , Phantom Types

build-type:         Simple
cabal-version:      >=1.10
-- Tested-with:

Extra-source-files: ChangeLog.md

flag pedantic
  Description:
    Pass additional flags, including -Werror, to GHC during compilation.
  Default:          False
  Manual:           True

library
  hs-source-dirs:   src
  exposed-modules:  Control.Monad.TaggedException.Lift
  -- other-modules:
  build-depends:
      base >= 4 && < 4.8
    -- ^ Tagged-exception-core is capable to handle this range.
    , exceptions > 0.6 && < 0.7
    -- ^ Interface of this package changed a lot between minor versions,
    -- therefore trying conservative approach. Dependency introduced in
    -- tagged-exception-lifting-2.0.0.0.
    , tagged-exception-core >= 1.0.0.0 && < 2.1
    , transformers >= 0.2 && < 0.4
    -- ^ Tagged-exception-core is capable to handle this range.

  default-language: Haskell2010

  other-extensions:
      CPP
    , NoImplicitPrelude

  GHC-options:      -Wall
  if impl(GHC >= 6.8)
    GHC-options:    -fwarn-tabs
  if impl(GHC >= 7.2)
    GHC-options:    -fwarn-identities
  if flag(pedantic)
    GHC-options:    -Werror

source-repository head
  type:             git
  location:         git://github.com/trskop/tagged-exception.git
